--- a/etc/cracking-the-coding-interview-150/1.md
+++ b/etc/cracking-the-coding-interview-150/1.md
@@ -1,4 +1,4 @@
-# 코딩 인터뷰 완전 분석 : 150가지 프로그래밍 문제와 해법
+# 코딩 인터뷰 완전 분석 : 150가지 프로그래밍 문제와 해법(1)
 * 이 책을 산 지 꽤됐는데, 이제서야 펼쳐본다. 최근 개정판은 문제풀이가 189가지던데, 뼈대는 같을 테니 일단은 갖고있는 책부터 읽자!
 * 빠르게 읽으면서 나한테 자극이 되는 내용 발췌
 
